add get handler for partitions
